--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Click and Spot</title>
 </head>
+
 <body>
+    <div class="shapeName">
+        <h1 id="name"></h1>
+    </div>
 </body>
 <script src="./script.js"></script>
+
 </html>
